# cudpp

apps/cudpp_testrig/: CMakeLists.txt
apps/stringSortCUDPP/: CMakeLists.txt  stringSortCUDPP.cu
include/: cudpp.h
src/cudpp/: cudpp.cpp  cudpp_plan.cpp  cudpp_plan.h  cudpp_stringsort.h
src/cudpp/app/: stringsort_app.cu
src/cudpp/kernel/: stringsort_kernel.cuh
